--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>it.polimi.ingsw.am52/it.polimi.ingsw.am52.HelloApplication</mainClass>
+                            <mainClass>it.polimi.ingsw.am52/it.polimi.ingsw.am52.view.gui.Gui</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
